fixed more alignment events page?

--- a/frontend/src/components/EventsIndex/EventsIndex.css
+++ b/frontend/src/components/EventsIndex/EventsIndex.css
@@ -2,3 +2,7 @@
     display: flex;
     justify-content: center;
 }
+
+.events-wrapper {
+    margin-top: 50px;
+}
